...
                    android:id="@+id/color_picker_current_color_view"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="start" />

                <View
                    android:id="@+id/color_picker_new_color_view"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="end" />
            </com.google.android.material.card.MaterialCardView>

            <LinearLayout
...
